--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@ h1 {
 }
 
 .second-section{
-	background-image: url(images/banner1.png);
+	background-image: url(images/banner1.jpg);
 	background-size: cover;
 	background-attachment: fixed;
 	height: 110vh;
@@ -86,6 +86,79 @@ h1 {
 }
 
 
+
+.box {
+	position: relative;
+	width: 55vw;
+	height: 50vh;
+	margin: 200px auto;
+	box-sizing: border-box;
+	
+	overflow: hidden;
+	background: rgba(28, 39, 38, 0.644);
+	border-radius: 12px;
+	
+	
+}
+
+
+
+.box .icon{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	background: rgb(73, 73, 69);
+	transition: 0.2s;
+	font-size: 40px;
+	
+}
+
+
+.box:hover .icon{
+	top: 20px;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 80px;
+	height: 80px;
+	border-radius: 500%;
+
+}
+
+.box .icon .fa{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	font-size: 80px;
+	transition: 0.2s;
+	border-radius: 500%;
+	color: #fff;
+}
+
+.box:hover .icon .fa{
+	font-size: 40px;
+
+}
+
+.box .content{
+	position: absolute;
+	top: 100%;
+	height: 100%;
+	font-size: 20px;
+	text-align: center;
+	padding: 10px;
+	box-sizing: border-box;
+	transition: 0.2s;
+}
+
+.box:hover .content{
+	top: 100px;
+}
+
+
 #footer{
 	background-color: #3D3B3B;
 	position: relative;
@@ -101,40 +174,3 @@ h1 {
 	text-align: center;
 }
 
-.box {
-	position: relative;
-	width: 50vw;
-	height: 45vh;
-	margin: 200px auto;
-	box-sizing: border-box;
-	
-	overflow: hidden;
-	background: rgb(73, 73, 69);
-	border-radius: 12px;
-	
-	
-}
-
-
-
-.box .icon{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: #CFCFEA;
-	transition: 0.3s;
-	font-size: 40px;
-	
-}
-
-
-.box:hover .icon{
-	top: 20px;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 80px;
-	height: 80px;
-	border-radius: 50%;
-}
