--- a/css/main.css
+++ b/css/main.css
@@ -1,58 +1,50 @@
-*{
+* {
 	margin: 0;
 	padding: 0;
-
 }
 
-html, body{
+html, body {
 	height: 100%;
 	width: 100%;
 	background-color: #000;
 }
 
-.page-wrapper{
+.page-wrapper {
 	min-height: 100%;
 }
 
-@font-face{
+@font-face {
 	font-family: 'OSF';
 	src: url(../assets/fonts/OuterspaceMilitia.ttf);
 	font-style: normal;
 	font-weight: 100;
-
 }
 
- @font-face{
+@font-face {
 	font-family: 'CUR';
 	src: url(../assets/fonts/AllertaStencil-Regular.ttf);
 	font-style: normal;
 	font-weight: 100;
-} 
+}
 
-@keyframes textanim{
-from{
-	opacity: 0;
+@keyframes textAnim {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 0.7;
+	}
 }
-to{
-	opacity: 0.7;
-}
-}
+
 
 @keyframes colorChange {
-	0%,
-
-	100% {
-	  opacity: 0;
+	0%, 100% {
+		opacity: 0;
 	}
-
 	50% {
 		opacity: 1;
-	  }
-	
-
+	}
 }
-
-
 
 /* SECTION-1 */
 
@@ -61,49 +53,40 @@ to{
 	height: 100vh;
 	min-width: 100%;
 	display: flex;
-
 	align-items: center;
 	justify-content: center;
 	text-align: center;
 	padding-bottom: 100px;
-
 }
 
-.first-section .filter1{
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		position: fixed;
-		top: 0;
-		left: 0;
-		background:  #fd0495c7;
-		animation: colorChange 10s ease-in-out infinite;
-		animation-fill-mode: both;
-		mix-blend-mode: overlay; 
+.first-section .filter1 {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background: #fd0495c7;
+	animation: colorChange 10s ease-in-out infinite;
+	animation-fill-mode: both;
+	mix-blend-mode: overlay;
 }
-
-
 
 /* video{
 	max-width: 1500px;
 	max-height: 1500px;
 } */
 
-.image-container{
+.image-container {
 	position: absolute;
-	background-image: url(../assets/images/newbanner.jpg);
+	background-image: url(../assets/images/newbanner-resized.jpg);
 	background-size: cover;
 	align-content: center;
 	width: 1800px;
 	height: 800px;
 	overflow: hidden;
 	position: fixed;
-
-	
-	
 }
-
-
 
 .content-1 h1 {
 	font-family: OSF;
@@ -112,30 +95,27 @@ to{
 	color: cornsilk;
 	line-height: 1.5;
 	word-spacing: -0.5em;
-    text-align: center;
-	opacity: 0.7; 
-	animation: textanim 8s 1;
-	
+	text-align: center;
+	opacity: 0.7;
+	animation: textAnim 8s 1;
 }
 
- 
-@media (max-width: 600px){
-	.content-1 h1{
+@media (max-width: 600px) {
+	.content-1 h1 {
 		position: relative;
 		justify-content: center;
 		left: 50%;
 		transform: translateX(-50%);
 		font-size: 2em;
 	}
-} 
-
+}
 
 /* SECTION-2 */
 
-.second-section{
+.second-section {
 	background-color: #000;
 	/* background: linear-gradient(to bottom,#000000 ,#5788fe ); */
-	background-image: url(../assets/images/cosmos3.png);
+	background-image: url(../assets/images/spaceship.jpg);
 	background-size: cover;
 	background-attachment: fixed;
 	height: 90vh;
@@ -149,162 +129,137 @@ to{
 	z-index: 2;
 }
 
-.second-section .filter2{
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		top: 0;
-		left: 0;
-		background:  #fd3d3d94;
-		animation: colorChange 10s ease-in-out infinite;
-		animation-fill-mode: both;
-		mix-blend-mode: overlay; 
+.second-section .filter2 {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: #fd3d3d94;
+	animation: colorChange 10s ease-in-out infinite;
+	animation-fill-mode: both;
+	mix-blend-mode: overlay;
 }
 
 .box {
 	position: relative;
-	cursor: pointer;
 	top: 90px;
 	width: 65vw;
 	height: 60vh;
-	
 	box-sizing: border-box;
-	
 	overflow: hidden;
-	background: rgba(28, 39, 38, 0.568);
+	background: rgba(0, 0, 0, 0.521);
 	border-radius: 12px;
-	opacity: 1	;
-	
-	
+	opacity: 0;
 }
 
-.box .content{
+.box .content {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 19px;
 	font-weight: lighter;
 	opacity: 1;
-	color: rgba(255, 255, 255, 0.719);
+	color: rgb(255, 255, 255);
 	padding: 40px;
 }
 
-
-
-
-
-
-
-
 /* FOOTER */
 
-.footer{
+.footer {
 	background-color: #3D3B3B;
+	
 	position: relative;
 	height: 20em;
 	width: 100%;
-	
 }
 
-.footer .footer-contents{
+.foot-img{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-image: url(../assets/images/Cmos3.jpg);
+	opacity: 0.4;
+}
+
+.footer .footer-contents {
 	/* border: 1px solid red; */
 	display: grid;
-	grid-template-columns: 1fr  1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
 	column-gap: 50px;
 	height: 38vh;
 	position: relative;
 	justify-content: space-around;
-	
-
 }
 
 /* CONTACT SECTION */
 
-.footer-contact{
-	
+.footer-contact {
 	height: 98%;
 	grid-column: 1/2;
 	/* border: 2px solid blue; */
-	
 }
 
-
-.footer-contact  h2{
+.footer-contact h2 {
 	margin-top: 40px;
 	margin-left: 20px;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	letter-spacing: 2px;
 	color: rgb(214, 214, 214);
-	
-	
 }
 
-.rule{
+.rule {
 	width: 60%;
 	position: relative;
 	top: 10px;
 	left: 20px;
 }
 
-.footer-contact p{
+.footer-contact p {
 	color: #fff;
 	margin-top: 20px;
 	margin-left: 20px;
 }
 
-
 /* QUICKLINKS SECTION */
 
-.footer-quicklinks{
-
+.footer-quicklinks {
 	height: 98%;
 	grid-column: 2/3;
 	/* border: 2px  solid #26db2f; */
-
-
 }
 
-.footer-quicklinks h2{
+.footer-quicklinks h2 {
 	margin-top: 40px;
 	margin-left: 20px;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	color: rgb(214, 214, 214);
-
 }
 
-
-
-
-.footer-quicklinks p{
+.footer-quicklinks p {
 	margin-top: 20px;
 	margin-left: 20px;
 }
 
-.footer-quicklinks a{
+.footer-quicklinks a {
 	color: #fff;
 	text-decoration: none;
 }
 
 /* SOCIAL  MEDIA SECTION */
 
-.footer-connect{
-	
-	
+.footer-connect {
 	height: 98%;
 	grid-column: 3/4;
 	/* border: 2px  solid #26db2f; */
-
-
 }
 
-.footer-connect h2{
+.footer-connect h2 {
 	margin-top: 40px;
 	margin-left: 20px;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	color: rgb(214, 214, 214);
 }
 
-
-
-.footer-connect .social{
+.footer-connect .social {
 	/* transform: translate(-50%,-50%); */
 	display: flex;
 	flex-wrap: wrap;
@@ -313,21 +268,20 @@ to{
 	position: relative;
 }
 
-.footer-connect .social li{
+.footer-connect .social li {
 	list-style: none;
 	margin-left: 20px;
 	margin-top: 15px;
 }
 
-.footer-connect .social .fa{
+.footer-connect .social .fa {
 	font-size: 25px;
 	line-height: 40px;
 	transition: 0.1s;
 	color: #fff;
-
 }
 
-.footer-connect .social li a{
+.footer-connect .social li a {
 	position: relative;
 	display: inline-block;
 	background-color: rgb(58, 58, 58);
@@ -335,55 +289,52 @@ to{
 	height: 40px;
 	text-align: center;
 	border-radius: 50%;
-	box-shadow: 0 5px 4px  rgba(0,0,0,0.5);
+	box-shadow: 0 5px 4px rgba(0, 0, 0, 0.5);
 }
 
-.footer-connect .social .github{
+.footer-connect .social .github {
 	cursor: pointer;
 }
 
-.footer-connect .social .github:hover a{
-	transform: translate(0,-5px);
+.footer-connect .social .github:hover a {
+	transform: translate(0, -5px);
 	background-color: rgb(0, 0, 0);
-
 }
 
-.footer-connect .social .twitter{
+.footer-connect .social .twitter {
 	cursor: pointer;
 }
 
-.footer-connect .social .twitter:hover a{
-	transform: translate(0,-5px);
+.footer-connect .social .twitter:hover a {
+	transform: translate(0, -5px);
 	background-color: rgb(0, 140, 255);
 }
 
-.footer-connect .social .linkedin{
+.footer-connect .social .linkedin {
 	cursor: pointer;
 }
 
-.footer-connect .social .linkedin:hover a{
-	transform: translate(0,-5px);
+.footer-connect .social .linkedin:hover a {
+	transform: translate(0, -5px);
 	background-color: rgb(49, 102, 216);
 }
 
-.footer-connect .social .youtube{
+.footer-connect .social .youtube {
 	cursor: pointer;
 }
 
-.footer-connect .social .youtube:hover a{
-	transform: translate(0,-5px);
+.footer-connect .social .youtube:hover a {
+	transform: translate(0, -5px);
 	background-color: rgb(211, 64, 19);
 }
 
-.footer-connect .social a:hover .fa{
+.footer-connect .social a:hover .fa {
 	color: #fff;
-} 
-
-
+}
 
 /* BOTTOM FOOTER */
 
-.footer-bottom{
+.footer-bottom {
 	position: absolute;
 	padding: 10px 0px 10px 0px;
 	bottom: 0px;
@@ -392,4 +343,3 @@ to{
 	background: rgb(32, 30, 30);
 	text-align: center;
 }
-
